minor spacing issue w/ chamfer

--- a/core/dslmcode/shared/drupal-7.x/themes/elmsln_contrib/chamfer/css/global.css
+++ b/core/dslmcode/shared/drupal-7.x/themes/elmsln_contrib/chamfer/css/global.css
@@ -416,3 +416,8 @@ video { max-width: 100%; height: auto; }
 		background-color:#fff;
   }
 }
+
+/* Cody and Palmer's Design eye */
+article.node .field-name-body {
+  padding-bottom: 3em;
+}
